--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 APP_ENV=development
-API_URL=https://fleet.samyotech.in/api
+# API_URL=https://fleet.samyotech.in/api
+ API_URL=http://192.168.1.40:7600/api
